--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,6 @@
 body {
   font-family: "Comfortaa", sans-serif;
 }
-
 @theme {
   --color-orangeish: #eeb2a9;
   --color-brownish: #762c2c;
@@ -12,6 +11,7 @@ body {
   --color-depression: #b2acac;
   --color-yellowish: #f5e2cf;
   --color-anotheryellow: #faf1e7;
+  --color-anothergreen: #afc9bf;
   --color-verylightgray: #d9d9d9;
   --color-verylightgreen: #d9e0de;
   --font-instrument: "Instrument Sans", sans-serif;
